--- a/HW5/hw05.Rmd
+++ b/HW5/hw05.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Consequences of Covid-19 for Candle Critiques"
-author: "Your Name Here"
+author: "Khoa Nguyen"
 date: "3/22/2021"
 output:
   html_document:
@@ -37,6 +37,8 @@ library(tidyverse)
 library(readr)
 library(patchwork)
 library(readxl)
+library(gridExtra)
+library(colorspace)
 ```
 
 ```{r}
@@ -71,10 +73,103 @@ Interpret these graphs.
 What do they show about scented candles over the time period?
 
 ```{r}
-Scented_Data %>% 
-  ggplot() %>% 
-  aes( x= as.Date(Date))
+Adjusted_Scented_Data <- Scented_Data %>% 
+  mutate(CandleID = as.factor(CandleID),
+         Date = as.Date(Date))
+
+Plot_Adj_Scent_Data <- Adjusted_Scented_Data %>% 
+  filter(Date > "2017-01-01") %>% 
+  group_by(Date) %>% 
+  mutate(
+    mean_rate = mean(Rating) 
+  ) %>% 
+  ggplot(
+    aes(x = Date,
+        y = mean_rate,
+        shape = CandleID,
+        color = CandleID,
+        fill = CandleID
+        )
+    ) +
+  geom_point(
+    alpha = .5,
+    shape = 1) +
+  scale_x_date(
+    name = "Date", 
+               date_breaks = "6 months",
+               date_labels = "%m-%Y"
+    ) +
+  geom_smooth(
+    method = "loess"
+    ) +
+  geom_vline(
+    xintercept = as.numeric(
+      as.Date(
+        "2020-01-20")),
+    linetype = "dashed", color = "green") +
+  scale_y_continuous(
+    name = "Average Rating") +
+  theme_classic() +
+  ggtitle("Average Scented Candle Comparison Graph") + 
+  guides(
+    x = guide_axis(
+      n.dodge = 2)) +
+  scale_color_brewer(
+    palette = "Dark2")
 ```
+
+```{r}
+Adjusted_Unscented_Data <- Unscented_Data %>% 
+  mutate(
+    CandleID = as.factor(CandleID),
+         Date = as.Date(Date))
+
+Plot_Adj_Unscent_Data <- Adjusted_Unscented_Data %>% 
+  filter(Date > "2017-01-01") %>% 
+  group_by(Date) %>% 
+  mutate(
+    mean_rate = mean(Rating) 
+  ) %>% 
+  ggplot(
+    aes(x = Date,
+        y = mean_rate,
+        shape = CandleID,
+        color = CandleID,
+        fill = CandleID
+        )
+    ) +
+  geom_point(
+    alpha = .5,
+    shape = 1) +
+  scale_x_date(
+    name = "Date", 
+               date_breaks = "6 months",
+               date_labels = "%m-%Y"
+    ) +
+  geom_smooth(
+    method = "loess"
+    ) +
+  geom_vline(
+    xintercept = as.numeric(
+      as.Date(
+        "2020-01-20")),
+    linetype = "dashed", color = "green") +
+  scale_y_continuous(
+    name = "Average Rating") +
+  theme_classic() +
+  ggtitle("Average Unscented Candle Comparison Graph") + 
+  guides(
+    x = guide_axis(
+      n.dodge = 2)) +
+  scale_color_brewer(
+    palette = "Dark2")
+```
+
+```{r}
+Plot_Adj_Scent_Data + Plot_Adj_Unscent_Data
+```
+
+> 
 
 
 ## Part 2: Combined plot
