--- a/Participation/s08_tibble-join-practice.Rmd
+++ b/Participation/s08_tibble-join-practice.Rmd
@@ -7,6 +7,7 @@ output:
 ```{r}
 library(readr)
 library(readxl)
+library(tidyverse)
 ```
 You are working on a study examining the impact of communication skills on parents' and childrens' satisfaction with their relationship. 
 This is a longituduinal study, currently with two waves collected at child ages 12 and 14.
@@ -39,24 +40,55 @@ Import the datasets into R, then do the following:
    Indicate which wave the data came from by setting the `suffix` argument.
    
 ```{r}
-full_data_join <- inner_join(child1, child2, by = "family_id")
-full_data_join
+complete_data_join <- inner_join(child1, child2, by = "family_id", suffix = c(".1", ".2"))
+complete_data_join
 ```
    
 2. For Wave 2, merge the parent and child data together.
    Keep only participants that have child ratings, whether or not they have parent data.
    Indicate which person the data came from by setting the `suffix` argument.
    
+```{r}
+w2_parent_child_data <- left_join(child2, parent2, by = "family_id", suffix = c(".child", ".parent"))
+w2_parent_child_data
+```
+   
 3. Merge the four datasets into one full dataset.
    Keep all participants.
    Indicate which wave and person the data came from by setting the `suffix` argument.
+
+```{r}
+all_data_set_merge1 <- full_join(child1, child2, by = "family_id", suffix = c(".child_wave1", ".child_wave2"))
+all_data_set_merge2 <- full_join(parent1, parent2, by = "family_id", suffix = c(".parent_wave1", ".parent_wave2"))
+all_data_set_merge3 <- full_join(all_data_set_merge1, all_data_set_merge2, by = "family_id")
+all_data_set_merge3
+```
    
 4. There is some missing data in Wave 2. 
    Which families have parent data but not child data in Wave 2?
+   
+```{r}
+missing_child_merge <- anti_join(parent2, child2, by = "family_id")
+missing_child_merge
+```
+
    Which families have child data but not parent data in Wave 2?
+
+```{r}
+missing_parent_merge <- anti_join(child2, parent2, by = "family_id")
+missing_parent_merge
+```
+
 
 5. Which families are missing both parent and child data in Wave 2?
    (Hint: You might need to look at Wave 1 as well.)
+
+```{r}
+full_wave1<- full_join(child1,parent1, by="family_id", suffix=c(".child1",".parent1"))
+full_wave2<- full_join(child2,parent2, by="family_id", suffix=c(".child2",".parent2"))
+missing_both<-anti_join (full_wave1,full_wave2,by="family_id")
+missing_both
+```
    
 6. You would like to send an email to the families that have missing data.
    Merge one or more of the tables from above with the emails dataset to create a mailing list.
